--- a/styles/price-list.css
+++ b/styles/price-list.css
@@ -1,12 +1,12 @@
 .price-list{
     padding-top: 37px;
-    padding-bottom: 60px;
+    padding-bottom: 62px;
 }
 
 .price-list__price-list-grid{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 39px 22px;
+    gap: 41px 22px;
     color: var(--dark-blue);
 }
 
@@ -23,10 +23,11 @@
     font-size: 29px;
     /*line-height: 120%;*/
     line-height: 1.2;
+    letter-spacing: -0.2px;
     text-transform: uppercase;
     text-align: center;
     max-width: 325px;
-    margin: 0 auto 17px;
+    margin: 0 auto 16px;
     
 }
 
@@ -92,7 +93,7 @@
     text-align: center;
     color: var(--dark-blue);
     margin: 0 auto;
-    padding: 14px 20px;
+    padding: 15px 19px 12px 19px;
     border-radius: 10px;
     background: var(--light-grey);
     max-width: 263px;
@@ -125,17 +126,37 @@
 
     .price-list {
         padding-top: 23px;
-        padding-bottom: 50px;
+        padding-bottom: 48px;
     }
 
     .price-list__price-list-grid{
         grid-template-columns: repeat(1, 344px);
-        gap: 24.7px;
+        gap: 24px;
+    }
+
+    .price-list-grid__item:nth-child(4) .price-list-grid__cover{
+        margin-bottom: 26px;
+    }
+
+    .price-list-grid__item:nth-child(7) .price-list-grid__cover{
+        margin-bottom: 25px;
+    }
+
+    .price-list-grid__item:nth-child(9) .price-list-grid__cover{
+        margin-bottom: 25px;
+    }
+
+    .price-list-grid__title {
+        margin: 0 auto 17px;
+    }
+
+    .price-list-grid__text {
+        margin-bottom: 27px;
     }
 
     .price-list-grid__description {
-        letter-spacing: -0.2px;
-        line-height: 1.33;
+        letter-spacing: -0.1px;
+        line-height: 1.39;
     }
 
     .price-list-grid__item:nth-child(7) .price-list-grid__description:last-child{
@@ -143,7 +164,8 @@
     }
 
     .price-list-grid__link {
-        letter-spacing: 1.2px;
-        word-spacing: 2px;
+        padding: 15px 20px 13px 21px;
+        letter-spacing: 0px;
+        word-spacing: 0px;
     }
 }
