--- a/styles/call-a-master.css
+++ b/styles/call-a-master.css
@@ -39,6 +39,7 @@
     border-radius: 6px;
     padding: 15px 0 13px 19px;
     width: 100%;
+    outline: none;
 }
 
 .master-box__input-item{
@@ -123,6 +124,7 @@
     height: 204px;
     padding: 11px 19px;
     margin-bottom: 6px;
+    outline: none;
 }
 
 .master-box__textarea::placeholder{
@@ -134,6 +136,15 @@
 
 .master-box__errors{
     color: var(--red);
+}
+
+.master-box__textarea:focus,
+.master-box__input:focus{
+    border: 1px solid rgb(231, 116, 46);
+}
+
+.error{
+    border: 1px solid var(--red);
 }
 
 .agreement{
