--- a/styles/slider-customer-reviews.css
+++ b/styles/slider-customer-reviews.css
@@ -149,10 +149,10 @@
   width: 66px;
 }
 
-.swiper-wrapper .swiper-slide:nth-child(2),
+/*.swiper-wrapper .swiper-slide:nth-child(2),
 .swiper-wrapper .swiper-slide:nth-child(3){
   padding-bottom: 93px;
-}
+}*/
 
 .swiper-wrapper .swiper-slide:nth-child(3) .swiper-slide__date-cover::before,
 .swiper-wrapper .swiper-slide:nth-child(3) .swiper-slide__date-cover::after{
